# astrodata

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  getting_started.html  index.html  introduction.html  model.safetensors  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yml  push_examples.yml  test.yml
_sources/: index.rst.txt  introduction.md.txt
_sources/api/: astrodata.data.loaders.rst.txt  astrodata.ml.metrics.rst.txt  astrodata.preml.rst.txt
_sources/python_api/: astrodata.data.rst.txt  astrodata.tracking.rst.txt
_sources/tutorial/: data.md.txt  ml.models.md.txt  preml.md.txt  preml.processors.md.txt
api/: astrodata.data.html  astrodata.data.loaders.html  astrodata.data.processors.html  astrodata.html  astrodata.ml.html  astrodata.ml.metrics.html  astrodata.ml.model_selection.html  astrodata.ml.models.html  astrodata.preml.html  astrodata.preml.processors.html  astrodata.tracking.html  astrodata.utils.html  modules.html
astrodata/data/: __init__.py  pipeline.py  schemas.py  utils.py
astrodata/models/: BaseModel.py  PytorchModel.py  (+3 more)
docs/: Makefile  autoexamples.py  conf.py  getting_started.md  index.rst  introduction.md
examples/: 1_sklearn_example.py  2_sklearnxgboost_example.py  3.1_gridsearch_example.py  3_gridsearch_example.py  3_gridsearchcv_example.py  4_mlflow_example.py  5_mlflow_gs_example.py  6_hyperopt_example.py  7_sklearnboosting_tracking.py  README.md  example.py  example_astrotaxi.py  example_config.yaml  gridsearch_example.py  mlflow_example.py  sklearn_example.py  sklearnxgboost_example.py
python_api/: astrodata.data.html  astrodata.data.loaders.html  astrodata.data.processors.html  astrodata.html  astrodata.ml.html  astrodata.ml.metrics.html  astrodata.ml.model_selection.html  astrodata.ml.models.html  astrodata.preml.html  astrodata.preml.processors.html  astrodata.tracking.html  astrodata.utils.html  modules.html
testdata/: .gitignore
tests/: conftest.py  test_classification.py  test_data_pipeline.py  test_gridsearch.py  test_hyperopt.py  test_preml.py  test_pytorch_model.py  test_regression.py  test_sklearn_metric.py  test_sklearn_model.py  test_sklearnmodel.py  test_torch_dataloader.py  test_torch_loader.py  test_utils_loss_func.py  test_vision_schemas.py  test_xgboost_model.py
tutorial/: config.html  data.html  data.loaders.html  data.overview.html  data.pipeline.html  data.processors.html  extending.html  ml.html  ml.metrics.html  ml.model_selection.html  ml.models.html  preml.html  preml.overview.html  preml.pipeline.html  preml.processors.html  tracking.dvc.html  tracking.git.html  tracking.html  tracking.models.html
(+190 files in other folders)
