[project]
name = "astrodata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.3",
    "pynbody>=2.0.0",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "xgboost>=3.0.0",
]

[dependency-groups]
dev = [
    "astrodata",
]

[tool.uv]
package = true

[tool.uv.sources]
astrodata = { workspace = true }

[tool.setuptools]  # configuration specific to the `setuptools` build backend.
packages = { find = { where = ["."], include = ["astrodata", "astrodata.*"] } }
