[project]
name = "astrodata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dvc>=3.59.2",
    "gitpython>=3.1.44",
    "jupyter>=1.1.1",
    "mlflow>=2.22.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.3",
    "pytest>=8.3.5",
    "scikit-learn>=1.6.1",
    "xgboost>=3.0.0",
]

[dependency-groups]
dev = [
    "astrodata",
]

[tool.uv]
package = true

[tool.uv.sources]
astrodata = { workspace = true }

[tool.setuptools]  # configuration specific to the `setuptools` build backend.
packages = { find = { where = ["."], include = ["astrodata", "astrodata.*"] } }

[project.optional-dependencies]

tensorflow = [
    "tensorflow>=2.0.0"
]
pytorch = [
    "torch>=2.0.0"
]
full = [
    "tensorflow>=2.0.0",
    "torch>=2.0.0"
]
