[project]
name = "astrodata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dvc>=3.59.2",
    "gitpython>=3.1.44",
    "hyperopt>=0.2.7",
    "mlflow>=2.22.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.3",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    "xgboost>=3.0.0",
]

[dependency-groups]
dev = [
    "astrodata",
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "jupyter>=1.1.1",
    "pre-commit>=4.2.0",
    "furo>=2025.7.19",
    "myst-parser>=4.0.1",
    "ruff>=0.12.4",
]
tests = [
    "pytest>=8.3.5"
]

[tool.uv]
package = true

[tool.uv.sources]
astrodata = { workspace = true }

[tool.setuptools]  # configuration specific to the `setuptools` build backend.
packages = { find = { where = ["."], include = ["astrodata", "astrodata.*"] } }

[project.optional-dependencies]

tensorflow = [
    "tensorflow>=2.0.0"
]
pytorch = [
    "torch>=2.0.0"
]
